--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Pan Fang"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "PhD candidate at Delft University of Technology"
+  location         : "Delft, the Netherlands"
+  employer         : "Delft University of Technology"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "P.Fang-1@tudelft.nl" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
