--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,11 @@ main:
   - title: "Publications"
     url: /publications/
 
+
+  - title: "Research"
+    url: /Research/   
+
+    
   - title: "Talks"
     url: /talks/    
 
