--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,9 +12,12 @@ main:
   - title: "Research"
     url: /Research/   
 
+
+  - title: "Codes"
+    url: /Codes/  
     
-  - title: "Talks"
-    url: /talks/    
+#  - title: "Talks"
+#    url: /talks/    
 
 #  - title: "Teaching"
 #    url: /teaching/    
