--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Delft, the Netherlands"
   employer         : "Delft University of Technology"
   uri              : # URL
-  email            : "P.Fang-1@tudelft.nl" 
+  email            : "panfang@zju.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
