--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ author:
   avatar           : "profile.png"
   name             : "Pan Fang"
   pronouns         : # example: "she/her"  
-  bio              : "PhD candidate at Delft University of Technology"
-  location         : "Delft, the Netherlands"
-  employer         : "Delft University of Technology"
+  bio              : "Postdoc at Zhejiang University"
+  location         : "Hangzhou, China"
+  employer         : "Zhejiang University"
   uri              : # URL
   email            : "panfang@zju.edu.cn" 
 
