--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ author:
   avatar           : "profile.png"
   name             : "Pan Fang"
   pronouns         : # example: "she/her"  
-  bio              : "Postdoc at Zhejiang University"
-  location         : "Hangzhou, China"
-  employer         : "Zhejiang University"
+  bio              : "Postdoc at Ghent University"
+  location         : "Ghent, Belgium"
+  employer         : "Ghent University"
   uri              : # URL
-  email            : "panfang@zju.edu.cn" 
+  email            : "Pan.Fang@UGent.be" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
